# bibliophile-backend

./: .gitignore  .travis.yml  Makefile  README.md  lookup.py  mypy.ini  pyproject.toml
bibliophile/: bibliocommons.py  goodreads.py  syndetics.py
bibliophile/bibliocommons/: parse.py  types.py
bibliophile/goodreads/: images.py  shelf.py
bibliophile/tests/: test_goodreads.py
bibliophile/tests/bibliocommons/: test_parse.py
bibliophile/tests/goodreads/: test_images.py
