[tool.black]
include = '\.py$'
# Don't attempt to normalize strings
# (Preserves the convention of "single quotes for data, double quotes for humans")
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = "bibliophile"

[tool.poetry]
name = "bibliophile"
version = "0.1.0"
description = "Find books at your local library"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://biblo.dcain.me"
repository = "https://github.com/DavidCain/bibliophile/"
authors = ["David Cain <davidjosephcain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "*"
grequests = "*"
lxml = "*"
requests = "*"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = ">= 5.0.0"  # Version 5 includes Black compatibility
pylint = "*"
pytest = "*"
